--- a/src/sass/components/_flags.scss
+++ b/src/sass/components/_flags.scss
@@ -19,33 +19,38 @@
 	&__item {
 		display: flex;
 		align-items: center;
-		border: 1px solid $color-grey-light;
+		border: 2px solid $color-grey;
 		border-radius: $border-radius-default;
 		transition: all 0.2s;
+		background-color: $color-primary-extra-light;
+		height: 4rem;
 		&:hover {
 			background-color: $color-primary-extra-light2;
 		}
 	}
 
 	&__img {
+		display: block;
 		height: 2rem;
 		border-radius: $border-radius-default;
 	}
 
 	&__row {
 		display: inline-block;
-		fill: $color-grey-light;
-		width: 3rem;
-		height: 3rem;
-		transform: translateX(-10%);
+		fill: $color-grey;
+		width: 4rem;
+		height: 5rem;
+		transform: translateX(-30%);
 		transition: all 0.3s;
 	}
 	&__link {
-		display: inline-block;
+		display: flex;
+		align-items: center;
 		justify-self: center;
+		justify-content: center;
 		width: 100%;
 		height: 100%;
-		padding: 1rem;
+		padding: 0.5rem;
 	}
 }
 
@@ -62,11 +67,13 @@
 	opacity: 1;
 	pointer-events: inherit;
 	visibility: visible;
+	background-color: $color-primary-extra-light;
+
 	cursor: pointer;
 }
 
 .open .flags__row {
-	transform: translateX(-10%) rotate(180deg);
+	transform: translateX(-30%) rotate(180deg);
 }
 
 .active .flags__img {
