--- a/src/sass/components/_list.scss
+++ b/src/sass/components/_list.scss
@@ -12,8 +12,8 @@
 		line-height: 1.2;
 	}
 	&__icon {
-		width: 3rem;
-		height: 3rem;
-		color: #e67e22;
+		width: 2rem;
+		height: 2rem;
+		fill: $color-primary;
 	}
 }
