--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -16,6 +16,7 @@
 		opacity: 0;
 		pointer-events: none;
 		visibility: hidden;
+		z-index: 50;
 	}
 	&__list {
 		list-style: none;
@@ -44,7 +45,20 @@
 		@include respond(tab-port) {
 			display: block;
 		}
+
+		&-icon {
+			width: 4.8rem;
+			height: 4.8rem;
+			fill: $color-grey-dark;
+			position: absolute;
+			top: 0;
+			left: 0;
+			transition: all 0.3s 0.2s cubic-bezier(0.36, 0, 0.62, -0.84);
+		}
 		&-btn {
+			position: relative;
+			width: 4.8rem;
+			height: 4.8rem;
 			border: none;
 			background: none;
 			cursor: pointer;
@@ -55,7 +69,12 @@
 			}
 		}
 		&-icon[name='close-outline'] {
-			display: none;
+			opacity: 0;
+			pointer-events: none;
+			visibility: hidden;
+			transition: all 0.3s 0.2s cubic-bezier(0.36, 0, 0.62, -0.84);
+			z-index: 100;
+			transform: translateX(100%);
 		}
 	}
 }
@@ -67,12 +86,17 @@
 	pointer-events: auto;
 	visibility: visible;
 	transform: translateX(0%);
+	position: fixed;
 }
 
 .nav-open .nav__mobile-icon[name='close-outline'] {
-	display: block;
+	opacity: 1;
+	pointer-events: initial;
+	visibility: visible;
+	transform: translateX(0);
 }
 
 .nav-open .nav__mobile-icon[name='menu-outline'] {
-	display: none;
+	opacity: 0;
+	transform: translateX(100%);
 }
