--- a/src/sass/layout/_cta.scss
+++ b/src/sass/layout/_cta.scss
@@ -42,7 +42,7 @@
 				rgba(235, 151, 78, 0.35),
 				rgba(230, 125, 34, 0.35)
 			),
-			url('../img/eating.jpg');
+			url('../media/imgs/eating.jpg');
 		background-size: cover;
 		background-position: center;
 
