--- a/src/sass/layout/_features.scss
+++ b/src/sass/layout/_features.scss
@@ -1,8 +1,8 @@
 .feature {
 	&__icon {
-		color: #e67e22;
-		height: 3.2rem;
-		width: 3.2rem;
+		fill: $color-primary;
+		height: 6rem;
+		width: 6rem;
 		margin-bottom: 3.2rem;
 		background-color: #fdf2e9;
 		padding: 1.6rem;
