--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -17,13 +17,22 @@
 	}
 
 	&__social-links {
+		width: 100%;
 		list-style: none;
 		display: flex;
+		justify-content: center;
 		gap: 2.4rem;
+
+		li {
+			width: 2.4rem;
+			height: 2.4rem;
+		}
 	}
 
 	&__social-icon {
-		font-size: 2.4rem;
+		width: 2.4rem;
+		height: 2.4rem;
+		fill: $color-grey;
 	}
 
 	&__copyright {
@@ -36,9 +45,14 @@
 	}
 
 	&__logo {
-		display: block;
+		display: flex;
+		justify-content: center;
 		margin-bottom: 3.2rem;
-		height: 2.2rem;
+		height: 5rem;
+		&-icon {
+			width: 5rem;
+			height: 5rem;
+		}
 	}
 
 	&__heading {
@@ -62,6 +76,14 @@
 		display: flex;
 		flex-direction: column;
 		gap: 2.4rem;
+
+		li {
+			width: 100%;
+
+			a {
+				width: 100%;
+			}
+		}
 	}
 
 	&__nav-col {
@@ -70,5 +92,11 @@
 			grid-column: span 2;
 			margin-bottom: 3.2rem;
 		}
+	}
+
+	&__link {
+		display: inline-block;
+		width: 2.4rem;
+		height: 2.4rem;
 	}
 }
